// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Pagination Cozy 1`] = `
<div
  style="height: 200px"
>
  
    
  <div
    class="fd-pagination"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="selectLabel"
      >
        Results per page: 
      </label>
      

            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="selectLabel selectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A327', ['aria-hidden']);
                                        toggleElAttrs('selectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                            
              <span
                class="fd-select__text-content"
                id="selectValue"
              >
                4
              </span>
              
                            
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                            
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        

                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A327"
        >
          
                    
          <ul
            aria-activedescendant="selectCombobox-currentlyFocusedItem"
            aria-labelledby="selectLabel"
            class="fd-list fd-list--dropdown fd-list"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="selectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    

        
    <nav
      class="fd-pagination__nav"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      

            
      <a
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

            
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        494
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        495
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        496
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        497
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        498
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

            
      <a
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="cozyPageInputPage"
      >
        Page:
      </label>
      

            
      <input
        aria-labelledby="cozyPageInputPage cozyPageInputOf"
        class="fd-input fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="cozyPageInputOf"
      >
        of 500
      </label>
      

            
      <a
        aria-disabled="true"
        aria-label="Next"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="true"
        aria-label="Last"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    

        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination First page 1`] = `
<section>
  <h3>
    &gt; 9 Pages
  </h3>
  

  <div
    class="fd-pagination"
  >
    
    
    <nav
      class="fd-pagination__nav"
      title="pagination with more than 9 pages"
    >
      
        
      <a
        aria-disabled="true"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="firstPageInputPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="firstPageInputPage firstPageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="1"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="firstPageInputOf"
      >
        of 500
      </label>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        2
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        3
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        4
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        5
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        6
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        7
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        500
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
    
    </div>
    

  </div>
  


  <h3>
    &lt; 9 Pages
  </h3>
  


  <div
    class="fd-pagination fd-pagination--short"
  >
    
    
    <nav
      class="fd-pagination__nav"
    >
      
        
      <a
        aria-disabled="true"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="firstPageInputShortPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="firstPageInputShortPage firstPageInputShortOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="3"
        min="1"
        required=""
        type="number"
        value="1"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="firstPageInputShortOf"
      >
        of 3
      </label>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link is-active"
        href="#"
      >
        1
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        2
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        3
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        3 Results
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Pagination Last page 1`] = `
<section>
  <h3>
    &gt; 9 Pages
  </h3>
  

  <div
    class="fd-pagination"
  >
    
    
    <nav
      class="fd-pagination__nav"
      title="pagination with more than 9 pages"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        494
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        495
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        496
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        497
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        498
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="lastPageInputPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="lastPageInputPage lastPageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="lastPageInputOf"
      >
        of 500
      </label>
      

        
      <a
        aria-disabled="true"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
    
    </div>
    

  </div>
  


  <h3>
    &lt; 9 Pages
  </h3>
  


  <div
    class="fd-pagination fd-pagination--short"
  >
    
    
    <nav
      class="fd-pagination__nav"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        2
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link is-active"
        href="#"
      >
        3
      </a>
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="lastPageInputShortPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="lastPageInputShortPage lastPageInputShortOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="3"
        min="1"
        required=""
        type="number"
        value="3"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="lastPageInputShortOf"
      >
        of 3
      </label>
      

        
      <a
        aria-disabled="true"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="true"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        3 Results
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Pagination Middle pages 1`] = `
<section>
  <h3>
    &gt; 9 Pages
  </h3>
  

  <div
    class="fd-pagination"
  >
    
    
    <nav
      class="fd-pagination__nav"
      title="pagination with more than 9 pages"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        298
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        299
      </a>
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="middlePageInputPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="middlePageInputPage middlePageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="300"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="middlePageInputOf"
      >
        of 500
      </label>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        301
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        302
      </a>
      

        
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        500
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
    
    </div>
    

  </div>
  


  <h3>
    &lt; 9 Pages
  </h3>
  


  <div
    class="fd-pagination fd-pagination--short"
  >
    
    
    <nav
      class="fd-pagination__nav"
    >
      
        
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
        
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link is-active"
        href="#"
      >
        2
      </a>
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="middlePageInputShortPage"
      >
        Page:
      </label>
      

        
      <input
        aria-labelledby="middlePageInputShortPage middlePageInputShortOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="3"
        min="1"
        required=""
        type="number"
        value="2"
      />
      

        
      <label
        class="fd-form-label fd-pagination__label"
        id="middlePageInputShortOf"
      >
        of 3
      </label>
      

        
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        3
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
        
      </a>
      

        
      <a
        aria-disabled="false"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
            
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
        
      </a>
      
    
    </nav>
    

    
    <div
      class="fd-pagination__total"
    >
      
        
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        3 Results
      </span>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Pagination Mobile 1`] = `
<div
  style="height: 200px;"
>
  
    
  <div
    class="fd-pagination fd-pagination--mobile"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="selectLabel"
      >
        Results per page: 
      </label>
      

            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="selectLabel selectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A327', ['aria-hidden']);
                                        toggleElAttrs('selectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                            
              <span
                class="fd-select__text-content"
                id="selectValue"
              >
                4
              </span>
              
                            
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                            
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        

                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A327"
        >
          
                    
          <ul
            aria-activedescendant="selectCombobox-currentlyFocusedItem"
            aria-labelledby="selectLabel"
            class="fd-list fd-list--dropdown fd-list"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="selectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    

        
    <nav
      class="fd-pagination__nav"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      

            
      <a
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

            
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

            
      <a
        class="fd-button fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="cozyPageInputPage"
      >
        Page:
      </label>
      

            
      <input
        aria-labelledby="cozyPageInputPage cozyPageInputOf"
        class="fd-input fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="cozyPageInputOf"
      >
        of 500
      </label>
      

            
      <a
        aria-disabled="true"
        aria-label="Next"
        class="fd-button fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="true"
        aria-label="Last"
        class="fd-button fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    

        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Pagination Per page 1`] = `
<div
  style="height: 175px"
>
  
    
  <div
    class="fd-pagination"
  >
    
        
    <div
      class="fd-pagination__per-page"
    >
      
            
      <label
        class="fd-form-label fd-pagination__per-page-label"
        id="compactSelectLabel"
      >
        Results per page: 
      </label>
      

            
      <div
        class="fd-popover"
      >
        
                
        <div
          class="fd-popover__control"
        >
          
                    
          <div
            class="fd-select fd-select--compact"
          >
            
                        
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="compactSelectLabel compactSelectValue"
              class="fd-select__control"
              id="compactSelectCombobox"
              onclick="
                                        toggleElAttrs('h0C6A326', ['aria-hidden']);
                                        toggleElAttrs('compactSelectCombobox', ['aria-expanded']);
                                    "
              tabindex="0"
            >
              
                          
              <span
                class="fd-select__text-content"
                id="compactSelectValue"
              >
                4
              </span>
              
                          
              <span
                class="fd-button fd-button--transparent fd-select__button"
              >
                
                                        
                <i
                  class="sap-icon--slim-arrow-down"
                />
                
                                    
              </span>
              
                        
            </button>
            
                    
          </div>
          
                
        </div>
        

                
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
          id="h0C6A326"
        >
          
                    
          <ul
            aria-activedescendant="compactSelectCombobox-currentlyFocusedItem"
            aria-labelledby="compactSelectLabel"
            class="fd-list fd-list--dropdown fd-list--compact"
            role="listbox"
          >
            
                        
            <li
              aria-selected="true"
              class="fd-list__item is-selected"
              id="compactSelectCombobox-currentlyFocusedItem"
              role="option"
              tabindex="0"
            >
              
                            
              <span
                class="fd-list__title"
              >
                4
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                8
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                16
              </span>
              
                        
            </li>
            
                        
            <li
              class="fd-list__item"
              role="option"
              tabindex="-1"
            >
              
                            
              <span
                class="fd-list__title"
              >
                32
              </span>
              
                        
            </li>
            
                    
          </ul>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    

        
    <nav
      class="fd-pagination__nav"
    >
      
            
      <a
        aria-disabled="false"
        aria-label="First"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-rewind"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="false"
        aria-label="Previous"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-left-arrow"
        />
        
            
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        1
      </a>
      

            
      <span
        class="fd-pagination__more"
        role="presentation"
      />
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        494
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        495
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        496
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        497
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        498
      </a>
      

            
      <a
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__link"
        href="#"
      >
        499
      </a>
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="perPageInputPage"
      >
        Page:
      </label>
      

            
      <input
        aria-labelledby="perPageInputPage perPageInputOf"
        class="fd-input fd-input--compact fd-pagination__input"
        max="500"
        min="1"
        required=""
        type="number"
        value="500"
      />
      

            
      <label
        class="fd-form-label fd-pagination__label"
        id="perPageInputOf"
      >
        of 500
      </label>
      

            
      <a
        aria-disabled="true"
        aria-label="Next"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--navigation-right-arrow"
        />
        
            
      </a>
      

            
      <a
        aria-disabled="true"
        aria-label="Last"
        class="fd-button fd-button--compact fd-button--transparent fd-pagination__button fd-pagination__button--mobile"
        href="#"
      >
        
                
        <i
          class="sap-icon sap-icon--media-forward"
        />
        
            
      </a>
      
        
    </nav>
    

        
    <div
      class="fd-pagination__total"
    >
      
            
      <span
        class="fd-form-label fd-pagination__total-label"
      >
        500 Results
      </span>
      
        
    </div>
    
    
  </div>
  

</div>
`;
